added sendjson for testing. motion and height data is being stored to the database but the update upon post isnt working'

--- a/standup/challenge/templates/index.html
+++ b/standup/challenge/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     {% load staticfiles %}
 	<title>Put your title here</title>
+    <meta http-equiv="refresh" content="5">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link type="text/css" rel="stylesheet" href="{% static 'style.css' %}" />
 </head>
